[package]
name = "ingenuity-dl"
version = "0.1.0"
authors = ["Parker Lamb"]
description = "Automatically download images from the Mars Ingenuity helicopter and compile them into a video."
edition = "2021"
license = "GPL-3.0-or-later"

exclude = [
    "docs/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
clap = "2.33.3"
console = "0.15.5"
futures = "0.3.26"
gifski = "1.10.0"
image = "0.24.5"
imgref = "1.9.4"
indicatif = "0.17.3"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rgb = "0.8.35"
serde_json = "1.0.93"
tempfile = "3.3.0"
tokio = { version = "1.25.0", features=[ "full" ]}
